Fix inconsistent toggle size calculation on Safari when zoom level changes. closes: #4410

--- a/packages/daisyui/src/components/toggle.css
+++ b/packages/daisyui/src/components/toggle.css
@@ -54,7 +54,7 @@
       }
     }
     &:before {
-      @apply rounded-selector relative start-0 col-start-2 row-start-1 aspect-square h-full bg-current;
+      @apply rounded-selector relative start-0 col-start-2 row-start-1 aspect-square h-full w-full bg-current;
       translate: 0;
       --tw-content: "";
       content: var(--tw-content);
